@@ -621,6 +621,66 @@ END
 		}
 	}
 
+=item "xcode"
+
+This package represents your XCode version.
+
+=cut
+
+	print STDERR "- checking for xcode version... " if ($options{debug});
+
+	$hash = {};
+	$hash->{package} = "xcode";
+	$hash->{status} = STATUS_PRESENT;
+	$hash->{description} = "[virtual package representing the developer tools]";
+	$hash->{homepage} = "http://www.finkproject.org/faq/usage-general.php#virtpackage";
+	$hash->{builddependsonly} = "true";
+	$hash->{descdetail} = <<END;
+This package represents the C/C++/ObjC developer tools
+provided by Apple.  If it does not show as installed,
+you can download it from Apple at:
+
+  http://connect.apple.com/
+
+(free registration required)
+END
+	$hash->{compilescript} = &gen_compile_script($hash);
+	my $xcode_version = 0;
+
+	if (-f "/Developer/Applications/Xcode.app/Contents/version.plist" and -x "/usr/bin/plutil") {
+		if (my $tempfile = tmpnam()) {
+			if (system("/usr/bin/plutil -convert xml1 -o '$tempfile' -s /Developer/Applications/Xcode.app/Contents/version.plist") == 0) {
+				my $last_was_version = 0;
+				if (open(PLUTIL, $tempfile)) {
+					while (<PLUTIL>) {
+						if (/CFBundleShortVersionString/) {
+							$last_was_version++;
+						} elsif ($last_was_version) {
+							($xcode_version) = $_ =~ /<string>(.*?)<\/string>/;
+							last;
+						}
+					}
+					close(PLUTIL);
+					unlink($tempfile);
+				} else {
+					print STDERR "unable to open the property list temp file: $!" if ($options{debug});
+				}
+			} else {
+				print STDERR "unable to run plutil: $!" if ($options{debug});
+			}
+		}
+	}
+
+	if ($xcode_version) {
+		$hash->{version} = $xcode_version . '-1';
+		print STDERR $hash->{version}, "\n" if ($options{debug});
+	} else {
+		$hash->{version} = '0-0';
+		print STDERR "unknown\n" if ($options{debug});
+		$hash->{status} = STATUS_ABSENT;
+	}
+	$self->{$hash->{package}} = $hash;
+
 =item "cctools-I<XXX>"
 
 This package represents the compiler tools provided by Apple.  It is
